--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,18 @@
-.App {
-  text-align: center;
+:root {
+	--background-dark: #1a1a1a;
+	--background-dark-gray: #222222;
+	--atk: #C844DB;
+	--def: #3d3d3d;
+	--spd: #2BCF6A;
+	--dex: #DA771F;
+	--vit: #F40020;
+	--wis: #3A83EE;
+	--hp: #36D2D8;
+	--mp: #E1C24F;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+html, body, #root {
+	height: 100%;
+	background-color: var(--background-dark);
+	color: white;
 }
