--- a/src/components/SetsDisplay.module.css
+++ b/src/components/SetsDisplay.module.css
@@ -1,6 +1,7 @@
 .setsDisplay {
 	display: flex;
 	flex-direction: column;
+	border-left: 1px solid #777;
 }
 
 .setDisplay {
@@ -14,4 +15,12 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+}
+
+.button {
+	border: 2px solid #fff;
+	border-radius: 0px;
+	background-color: var(--background-dark-gray);
+	font-weight: bolder;
+	color: #fff;
 }
