--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,15 @@
 .app {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
+}
+
+.topBar {
+
+}
+
+.main {
+	display: flex;
+	flex: 1;
 }
