--- a/src/routes/SelectorPage.module.css
+++ b/src/routes/SelectorPage.module.css
@@ -2,8 +2,20 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	align-content: center;
 	max-width: 80%;
 	max-height: 80%;
 	overflow-y: scroll;
+	background-color: black;
+	padding: 16px;
+	border-radius: 32px;
+}
+
+.remove {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 48px;
+	width: 64px;
+	height: 64px;
+	cursor: pointer;
 }
