Fix a bunch of tooltip positioning & scaling stuff

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html, body, #root {
 	height: 100%;
 	background-color: var(--background-dark);
 	color: white;
+	overflow: hidden;
 }
 
 .highlightHover {
