--- a/src/routes/SetPage.module.css
+++ b/src/routes/SetPage.module.css
@@ -41,6 +41,17 @@
 	border-radius: 4px;
 }
 
+.numberInput::-webkit-outer-spin-button,
+.numberInput::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.numberInput[type=number] {
+  -moz-appearance: textfield;
+}
+
 .statusEffectRow {
 	display: flex;
 	align-items: center;
