--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@ html, body, #root {
 .highlightHover:hover {
 	filter: drop-shadow(0 0 2px white);
 }
+
+
+.numberInput {
+	width: 52px;
+	background-color: var(--background-dark-gray);
+	border: 1px solid;
+	color: white;
+	padding: 2px;
+	appearance: textfield;
+	text-align: center;
+	margin: 2px;
+	border-radius: 4px;
+}
+
+.numberInput::-webkit-outer-spin-button,
+.numberInput::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.numberInput[type=number] {
+  -moz-appearance: textfield;
+}
